[gd_scene load_steps=38 format=2]

[ext_resource path="res://common/GemSprite.gd" type="Script" id=1]
[ext_resource path="res://sprites/gems.png" type="Texture" id=2]
[ext_resource path="res://sprites/bar.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 96, 0.15, 32, 31.9 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 450, 350, 50 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 100, 350, 50 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 200, 350, 50 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 300, 350, 50 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 32, 32, 32, 31.9 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 32, 32, 31.9 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 150, 350, 50 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 250, 350, 50 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 96, 64.3912, 32, 31.6049 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 96.7692, 32, 31.2099 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 32, 96.3741, 32, 31.6049 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 65.0741, 97.1642, 30.6173, 30.8148 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 97, 33, 30, 30 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 65, 32, 30 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 32, 65, 32, 30 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 65, 32, 30 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 96, 96.634, 32, 31 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 128.582, 32, 31 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 32, 128.5, 32, 31 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 128.5, 32, 30.947 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 98, 128.727, 28, 31.4074 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 160.282, 32, 31.4074 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 32, 160.496, 32, 31.5038 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 160.891, 32, 31.1087 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 96, 192.5, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 96, 161, 32, 30 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 193, 32, 30 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 32, 193, 32, 30 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 193, 32, 30 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 225, 32, 30 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="OffGem" type="Sprite" parent="."]
visible = false
z_index = 1
texture = SubResource( 1 )

[node name="GreenGem" type="Sprite" parent="."]
visible = false
z_index = 1
texture = SubResource( 2 )

[node name="YellowGem" type="Sprite" parent="."]
visible = false
z_index = 1
texture = SubResource( 3 )

[node name="RedGem" type="Sprite" parent="."]
visible = false
z_index = 1
texture = SubResource( 4 )

[node name="BarOffGem" type="Sprite" parent="."]
visible = false
z_index = 1
texture = SubResource( 5 )

[node name="BarGreenGem" type="Sprite" parent="."]
visible = false
z_index = 1
texture = SubResource( 6 )

[node name="BarYellowGem" type="Sprite" parent="."]
visible = false
z_index = 1
texture = SubResource( 7 )

[node name="BarRedGem" type="Sprite" parent="."]
visible = false
z_index = 1
texture = SubResource( 8 )

[node name="GreenGemPressed" type="Sprite" parent="."]
visible = false
z_index = 1
texture = SubResource( 9 )

[node name="YellowGemPressed" type="Sprite" parent="."]
visible = false
z_index = 1
texture = SubResource( 10 )

[node name="BarGreenGemPressed" type="Sprite" parent="."]
visible = false
z_index = 1
texture = SubResource( 11 )

[node name="BarYellowGemPressed" type="Sprite" parent="."]
visible = false
z_index = 1
texture = SubResource( 12 )

[node name="GreenTail" type="Sprite" parent="."]
visible = false
scale = Vector2( 1, 1.03226 )
texture = SubResource( 13 )

[node name="YellowTail" type="Sprite" parent="."]
visible = false
scale = Vector2( 1, 1.03226 )
texture = SubResource( 14 )

[node name="RedTail" type="Sprite" parent="."]
visible = false
scale = Vector2( 1, 1.03226 )
texture = SubResource( 15 )

[node name="OffTail" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -4.76837e-07 )
scale = Vector2( 1, 1.06667 )
texture = SubResource( 16 )

[node name="GreenMiddle" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -4.76837e-07 )
scale = Vector2( 1, 1.06667 )
texture = SubResource( 17 )

[node name="YellowMiddle" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 4.76837e-07 )
scale = Vector2( 1, 1.06667 )
texture = SubResource( 18 )

[node name="RedMiddle" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 4.76837e-07 )
scale = Vector2( 1, 1.06667 )
texture = SubResource( 19 )

[node name="OffMiddle" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 4.76837e-07 )
scale = Vector2( 1, 1.06667 )
texture = SubResource( 20 )

[node name="OffGem0" type="Sprite" parent="."]
visible = false
z_index = 1
texture = SubResource( 21 )

[node name="OffGem1" type="Sprite" parent="."]
visible = false
z_index = 1
texture = SubResource( 22 )

[node name="OffGem2" type="Sprite" parent="."]
visible = false
z_index = 1
texture = SubResource( 23 )

[node name="OffGem3" type="Sprite" parent="."]
visible = false
z_index = 1
texture = SubResource( 24 )

[node name="OffMiddle0" type="Sprite" parent="."]
visible = false
scale = Vector2( 1, 1.03226 )
texture = SubResource( 25 )

[node name="OffMiddle1" type="Sprite" parent="."]
visible = false
scale = Vector2( 1, 1.03226 )
texture = SubResource( 26 )

[node name="OffMiddle2" type="Sprite" parent="."]
visible = false
scale = Vector2( 1, 1.03226 )
texture = SubResource( 27 )

[node name="OffMiddle3" type="Sprite" parent="."]
visible = false
scale = Vector2( 1, 1.03226 )
texture = SubResource( 28 )

[node name="OffMiddleBar" type="Sprite" parent="."]
visible = false
texture = SubResource( 29 )

[node name="OffTail0" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -0.25 )
scale = Vector2( 1, 1.05 )
texture = SubResource( 30 )

[node name="OffTail1" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 5.96046e-08 )
scale = Vector2( 1, 1.06667 )
texture = SubResource( 31 )

[node name="OffTail2" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 5.96046e-08 )
scale = Vector2( 1, 1.06667 )
texture = SubResource( 32 )

[node name="OffTail3" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 4.76837e-07 )
scale = Vector2( 1, 1.06667 )
texture = SubResource( 33 )

[node name="OffTailBar" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -2.68221e-07 )
scale = Vector2( 1, 1.06667 )
texture = SubResource( 34 )
